Updated stylesheet and removed flex.css.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Json test</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/flex.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body id="santaCruz">
     <div id="pageWrap">
