added the global nav class switch anon function.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
   <body id="santaCruz">
     <div id="pageWrap">
       <header id="header">
-        <nav id="mainNav">
-          <h1>Waves</h1>
+        <nav id="globalNav">
+          <ul>
+            <li><a href="#" id="steamers" class="active">Steamers</a></li>
+            <li><a href="#" id="rincon">Rincon</a></li>
+            <li><a href="#" id="trestles">Trestles</a></li>
+          </ul>
         </nav>
       </header>
       <section id="content">
         <nav ="localNav">
           <ul>
-            <li>Overview</li>
-            <li>Wave Conditions</li>
-            <li>Weather Conditions</li>
+            <li><a href="#">Waves</a></li>
+            <li><a href="#">About</a></li>
           </ul>
         </nav>
         <section id="mainDisplay">
@@ -30,7 +33,6 @@
           </div>
         </section><!-- end conditions info section -->
       </section><!-- end content section -->
-      <button>Rincon</button>
       <footer>
         <p><small>By bwynn</small></p>
       </footer>
