Sorting out json call switch.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <header id="header">
         <nav id="globalNav">
           <ul>
-            <li><a href="#" id="steamers" class="active">Steamers</a></li>
-            <li><a href="#" id="rincon">Rincon</a></li>
+            <li><a href="#" id="santaCruz" class="active">Steamers</a></li>
+            <li><a href="#" id="carpenteria">Rincon</a></li>
             <li><a href="#" id="trestles">Trestles</a></li>
           </ul>
         </nav>
