--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
-  <body id="santaCruz">
+  <body id="carpenteria">
     <div id="pageWrap">
       <header id="header">
         <nav id="globalNav">
