Created nav loading module that creates new nav links when a new item is added to the object. this makes for easy scaling for future locations being added.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,11 @@
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
-  <body id="carpenteria">
+  <body>
     <div id="pageWrap">
       <header id="header">
         <nav id="globalNav">
-          <ul>
-            <li><a href="#" id="santaCruz" class="active">Steamers</a></li>
-            <li><a href="#" id="carpenteria">Rincon</a></li>
-            <li><a href="#" id="trestles">Trestles</a></li>
-          </ul>
+          <ul id="globalNavContent"></ul>
         </nav>
       </header>
       <section id="content">
