Cleaned up the content being called and added local time to display in the expected container.

--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
             <li><a href="#">About</a></li>
           </ul>
         </nav>
-        <section id="mainDisplay">
+        <article id="mainDisplay">
           <figure class="backgd"></figure>
           <div id="conditionsInfo">
-            <ul>
-
-            </ul>
+            <ul id="localData"></ul>
+            <ul id="remoteData"></ul>
           </div>
-        </section><!-- end conditions info section -->
+        </article><!-- end conditions info section -->
       </section><!-- end content section -->
       <footer>
         <p><small>By bwynn</small></p>
