Added quite a few changes to styles, script and html, including building the content object, to help determine content to be displayed in the application.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </nav>
       </header>
       <section id="content">
-        <nav ="localNav">
+        <nav id="localNav">
           <ul>
-            <li><a href="#">Waves</a></li>
+            <li><a href="#" class="active">Waves</a></li>
             <li><a href="#">About</a></li>
           </ul>
         </nav>
