--- a/test.html
+++ b/test.html
@@ -1,14 +1,37 @@
-<Doctype html>
+<!Doctype html>
 <html>
   <head>
     <title>Script testing sandbox</title>
-    <style>
-    #results li.pass {color: green;}
-    #results li.fail {color: red;}
-  </style>
+    <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
     <ul id='results'></ul>
+    <section id="content">
+      <nav id="localNav">
+        <ul>
+          <li><a href="#" class="active">Waves</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </nav>
+      <article id="mainDisplay">
+        <figure class="backgd"></figure>
+        <div id="conditionsInfo">
+          <ul id="localData"></ul>
+          <ul id="remoteData">
+            <li><span>10:10:15 PM</span>Local Time</li>
+            <li><span>62</span>Air Temperature</li>
+            <li><span>South West</span>Wind Direction</li>
+            <li><span>4</span>Wind Speed</li>
+            <li><span>Clear</span>Skies Currently</li>
+            <li><span>4.75</span>Wave Size</li>
+            <li><span>SW</span>Swell Direction</li>
+            <li><span>65</span>Water Temperature</li>
+            <li><span>11</span>Swell Period (seconds)</li>
+          </ul>
+        </div>
+      </article><!-- end conditions info section -->
+    </section><!-- end content section -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='js/test.js'></script>
   </body>
