Additions made to display the content based on the active button. Still running into issues, not resolved.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <figure class="backgd"></figure>
           <div id="conditionsInfo">
             <ul id="localData"></ul>
-            <ul id="remoteData"></ul>
+            <ul id="remoteData" class="flexDisplay"></ul>
           </div>
         </article><!-- end conditions info section -->
       </section><!-- end content section -->
