Display functions for content now behaving as expected in chrome. Prefix additions required for full browser support.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <section id="content">
         <nav id="localNav">
           <ul>
-            <li><a href="#" class="active">Waves</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#" id="wavesContentBtn" class="active">Waves</a></li>
+            <li><a href="#" id="aboutContentBtn">About</a></li>
           </ul>
         </nav>
         <article id="mainDisplay">
