Page title now included within presentational conditional. Navigation needs to be mobile-fied by placing into a drop down menu for mobile pages.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         </nav>
       </header>
       <section id="content">
+        <div id="pageTitle"></div>
         <nav id="localNav">
-          <ul>
+          <ul class="flexDisplay rowWrap flexJustify stretch">
             <li><a href="#" id="wavesContentBtn" class="active">Waves</a></li>
             <li><a href="#" id="aboutContentBtn">About</a></li>
           </ul>
@@ -25,7 +26,7 @@
           <figure class="backgd"></figure>
           <div id="conditionsInfo">
             <ul id="localData"></ul>
-            <ul id="remoteData" class="flexDisplay"></ul>
+            <ul id="remoteData" class="flexDisplay rowWrap flexJustify stretch"></ul>
           </div>
         </article><!-- end conditions info section -->
       </section><!-- end content section -->
