Adjustments to the styles, added media query declarations to make template fully responsive.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
   <head>
-    <title>Json test</title>
+    <title>Quick Wave Check</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.css"/>
@@ -10,6 +10,7 @@
   <body>
     <div id="pageWrap">
       <header id="header">
+        <a href="#" id="showNav"></a>
         <nav id="globalNav">
           <ul id="globalNavContent"></ul>
         </nav>
