--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="pageWrap">
       <header id="header">
+        <a href="#" id="homePageIcon"></a>
         <a href="#" id="showNav"></a>
         <nav id="globalNav">
           <ul id="globalNavContent"></ul>
