Added all inital image assets, updated script to include a class changing function for the background images.  Styles also applied, home page relative link added, which will take user back.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
     <div id="pageWrap">
       <header id="header">
-        <a href="#" id="homePageIcon"></a>
+        <a href="/waves" id="homePageIcon"></a>
         <a href="#" id="showNav"></a>
         <nav id="globalNav">
           <ul id="globalNavContent"></ul>
         </nav>
       </header>
       <section id="content">
-        <figure class="backgd"></figure>
+        <figure id="backgd"></figure>
         <div id="pageTitle"></div>
         <nav id="localNav">
           <ul class="flexDisplay rowWrap flexJustify stretch">
