A lot of style updates, set the local navigation, background heights, background positions, modified flex characteristics for the local nav.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <figure id="backgd"></figure>
         <div id="pageTitle"></div>
         <nav id="localNav">
-          <ul class="flexDisplay rowWrap flexJustify stretch">
-            <li><a href="#" id="wavesContentBtn" class="active">Waves</a></li>
+          <ul class="flexDisplay rowWrap flexJustify stretch"> 
+            <li><a href="#" id="wavesContentBtn" class="active">Right Now</a></li>
             <li><a href="#" id="aboutContentBtn">About</a></li>
           </ul>
         </nav>
