More styles applied to the page, added max width property to the body element to make it look nice on larger monitors.

--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
       </header>
       <section id="content">
         <figure id="backgd"></figure>
-        <div id="pageTitle"></div>
-        <nav id="localNav">
-          <ul class="flexDisplay rowWrap flexJustify stretch"> 
-            <li><a href="#" id="wavesContentBtn" class="active">Right Now</a></li>
-            <li><a href="#" id="aboutContentBtn">About</a></li>
-          </ul>
-        </nav>
-        <article id="mainDisplay">
-          <div id="conditionsInfo">
-            <ul id="localData"></ul>
-            <ul id="remoteData" class="flexDisplay rowWrap flexJustify stretch"></ul>
-          </div>
-        </article><!-- end conditions info section -->
+        <div id="contentInnerWrap">
+          <div id="pageTitle"></div>
+          <nav id="localNav">
+            <ul class="flexDisplay rowWrap flexJustify stretch">
+              <li><a href="#" id="wavesContentBtn" class="active">Right Now</a></li>
+              <li><a href="#" id="aboutContentBtn">About</a></li>
+            </ul>
+          </nav>
+          <article id="mainDisplay">
+            <div id="conditionsInfo">
+              <ul id="localData"></ul>
+              <ul id="remoteData" class="flexDisplay rowWrap flexJustify stretch"></ul>
+            </div>
+          </article><!-- end conditions info section -->
+        </div>
       </section><!-- end content section -->
       <footer>
         <p><small>By bwynn</small></p>
