Added a function to clear out the content of the #pageLoad when interacting with any global nav anchor element. Added in the html to generate on page load. Because this is the default content, I don't need to take up the space generating any of the code in js. I'm sure this content will change soon, but this will act quickly as a placeholder. Not worrying about styling while i work on the checklist of things to wrap up for a launch build.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
           <ul id="globalNavContent"></ul>
         </nav>
       </header>
+      <section id="pageLoad">
+        <h1>Quick Wave Check</h1>
+        <form>
+          <input type="text" maxlength="6" placeholder="zip code"/>
+          <button type="submit">Submit</button><!-- it'd be cool to use a unicode graphic here perhaps -->
+        </form>
+        <p><small>OR</small></p>
+        <a href="#">Check the waves</a>
+      </section>
       <section id="content">
         <figure id="backgd"></figure>
         <div id="contentInnerWrap">
