Nav button now changed over to CHECK WAVES. Style adjustments as the global nav relies on the positioning of the box, as the top logo is set at display: block. The current navigation/ui relies on relative positioning to display properly.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="pageWrap">
       <header id="header">
         <a href="/waves" id="homePageIcon"></a>
-        <a href="#" id="showNav"></a>
+        <a href="#" id="showNav">Check Waves</a>
         <nav id="globalNav">
           <ul id="globalNavContent"></ul>
         </nav>
