--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         </nav>
       </header>
       <section id="pageLoad">
-        <h1>Quick Wave Check</h1>
+        <h1>Waves Right Now</h1>
         <form>
-          <input type="text" maxlength="6" placeholder="zip code"/>
+          <label for="enterZip">Check your local weather condtions:</label>
+          <input type="text" id="enterZip" maxlength="6"  size="15" placeholder="zip code"/>
           <button type="submit">Submit</button><!-- it'd be cool to use a unicode graphic here perhaps -->
         </form>
         <p><small>OR</small></p>
@@ -44,7 +45,7 @@
         </div>
       </section><!-- end content section -->
       <footer>
-        <p><small>By bwynn</small></p>
+        <p><small>&copy; 2015 bwynn</small></p>
       </footer>
     </div><!-- end pageWrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
