About half way through the button element stylings. Had to adjust conditional in script because it checked the boolean of a class attribute value for an element that I've added a class of .btn to. Had to adjust the conditional to check a boolean using the .hasClass method on the class .active.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h1>Waves Right Now</h1>
         <form>
           <label for="enterZip">Check your local weather condtions:</label>
-          <input type="text" id="enterZip" maxlength="6"  size="15" placeholder="zip code"/>
-          <button type="submit">Submit</button><!-- it'd be cool to use a unicode graphic here perhaps -->
+          <input type="text" id="enterZip" maxlength="6" placeholder="zip code"/>
+          <button type="submit" class="btn">Submit</button><!-- it'd be cool to use a unicode graphic here perhaps -->
         </form>
         <p><small>OR</small></p>
         <a href="#">Check the waves</a>
@@ -32,8 +32,8 @@
           <div id="pageTitle"></div>
           <nav id="localNav">
             <ul class="flexDisplay rowWrap flexJustify stretch">
-              <li><a href="#" id="wavesContentBtn" class="active">Right Now</a></li>
-              <li><a href="#" id="aboutContentBtn">About</a></li>
+              <li><a href="#" id="wavesContentBtn" class="active btn">Right Now</a></li>
+              <li><a href="#" id="aboutContentBtn" class="btn">About</a></li>
             </ul>
           </nav>
           <article id="mainDisplay">
