Added the first portion of the user ajax call. Changed Location prototype for weather. Now takes 2 arguments, this allows for finer granulation of the ajax call being made and allows for different types of calls. A restriction however, is that right now the model for the locations is building content based on the view model for listBuilder method. The model return values should be independent themselves, this is an issue I have been putting off, but it looks like it may be about time to tackle it.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         <form>
           <label for="enterZip">Check your local weather condtions:</label>
           <input type="text" id="enterZip" maxlength="6" placeholder="zip code"/>
-          <button type="submit" class="btn">Submit</button><!-- it'd be cool to use a unicode graphic here perhaps -->
+          <button type="submit" id="zipBtn" class="btn">Submit</button><!-- it'd be cool to use a unicode graphic here perhaps -->
         </form>
-        <p><small>OR</small></p>
-        <a href="#">Check the waves</a>
+        <div id="pageLoadDataContainer">
+          <p><small>OR</small></p>
+          <a href="#">Check the waves</a>
+        </div>
       </section>
       <section id="content">
         <figure id="backgd"></figure>
