Incorporated the user input ajax call, which allows user to check their current weather conditions.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
           <button type="submit" id="zipBtn" class="btn">Submit</button><!-- it'd be cool to use a unicode graphic here perhaps -->
         </form>
         <div id="pageLoadDataContainer">
-          <p><small>OR</small></p>
-          <a href="#">Check the waves</a>
+          <div id="optionalNav">
+            <p><small>OR</small></p>
+            <a href="#">Check the waves</a>
+          </div>
+          <ul id="userWeatherContent" class="flexDisplay rowWrap flexJustify stretch"></ul>
         </div>
       </section>
       <section id="content">
