Added styles, changed markup to reflect new home page, which gives users an option of choosing to check the waves or the weather. WEather opens a form and input to place their zip code, to return the current weather using a flexbox based template, also used on the other views, a slightly different format for mobile devices however. JS additions are to activate, hide and show elements when an event is triggered.

--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@
         </nav>
       </header>
       <section id="pageLoad">
-        <h1>Waves Right Now</h1>
+        <a href="#" id="openWaveNav"><h1>Check the Waves</h1></a>
+        <p><small>or</small></p>
+        <a href="#" id="checkWeatherBtn"><h2>Check the Weather</h2></a>
         <form>
           <label for="enterZip">Check your local weather condtions:</label>
           <input type="text" id="enterZip" maxlength="6" placeholder="zip code"/>
           <button type="submit" id="zipBtn" class="btn">Submit</button><!-- it'd be cool to use a unicode graphic here perhaps -->
         </form>
         <div id="pageLoadDataContainer">
-          <div id="optionalNav">
-            <p><small>OR</small></p>
-            <a href="#">Check the waves</a>
-          </div>
           <ul id="userWeatherContent" class="flexDisplay rowWrap flexJustify stretch"></ul>
         </div>
       </section>
