--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
         </nav>
       </header>
       <section id="pageLoad">
-        <a href="#" id="openWaveNav"><h1>Check the Waves</h1></a>
-        <p><small>or</small></p>
-        <a href="#" id="checkWeatherBtn"><h2>Check the Weather</h2></a>
+        <div id="mainBtns">
+          <a href="#" id="openWaveNav">
+            <figure id="waveIcon" class="icon"></figure>
+            <h1>Check the Waves</h1>
+          </a>
+          <p>or</p>
+          <a href="#" id="checkWeatherBtn">
+            <figure id="windIcon" class="icon"></figure>
+            <h1>Check the Weather</h1>
+          </a>
+        </div>
         <form>
           <label for="enterZip">Check your local weather condtions:</label>
           <input type="text" id="enterZip" maxlength="6" placeholder="zip code"/>
