Modified relative link to reflect new file path of index file.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="pageWrap">
       <header id="header">
-        <a href="/waves" id="homePageIcon"></a>
+        <a href="/sites/waves/" id="homePageIcon"></a>
         <a href="#" id="showNav"></a>
         <nav id="globalNav">
           <ul id="globalNavContent"></ul>
