--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="pageWrap">
       <header id="header">
-        <a href="/sites/waves/" id="homePageIcon"></a>
+        <a href="/" id="homePageIcon"></a>
         <a href="#" id="showNav"></a>
         <nav id="globalNav">
           <ul id="globalNavContent"></ul>
@@ -57,6 +57,7 @@
       </section><!-- end content section -->
     </div><!-- end pageWrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src='js/script.js'></script>
+    <script src='js/model.app.js'></script>
+    <script src='js/app.js'></script>
   </body>
 </html>
